--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/necolas.github.io_normalize.css_8.0.1_normalize.css">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="dark-mode" >
+<body >
 
    <!-- SITE-HEADER -->
    <header class="site-header">
