--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
     </div>
    </header>
 
+   <!-- MAIN-CONTENT -->
+    <main class="main-content">
+      <div class="container">
+        <form class="filters" action="https://echo.htmlacademy.ru" method="get">
+          <input class="filters-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
+
+          <select class="filters-region-select"  name="region" id="" aria-label="Regions">
+            <option selected disabled>Filter by bg</option>
+            <option>Afrika</option>
+            <option>America</option>
+            <option>Asia</option>
+            <option>Yevropa</option>
+            <option>Oceaniya</option>
+          </select>
+        </form>
+      </div>
+    </main>
+
   <script src="./js/main.js"></script>
 </body>
 </html>
