--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-   <!-- SITE-HEADER -->
-   <header class="site-header">
+  <!-- SITE-HEADER -->
+  <header class="site-header">
     <div class="site-header-container container">
       <a class="site-header-logo" href="index.html">Where in the world?</a>
       <button class="site-header-theme-toggler" type="button">
@@ -22,14 +22,14 @@
         </span>
       </button>
     </div>
-   </header>
+  </header>
 
-   <!-- MAIN-CONTENT -->
-    <main class="main-content">
-      <div class="container">
+  <!-- MAIN-CONTENT -->
+  <main class="main-content">
+    <div class="container">
+      <section>
         <form class="filters" action="https://echo.htmlacademy.ru" method="get">
           <input class="filters-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
-
           <select class="filters-region-select"  name="region" id="" aria-label="Regions">
             <option selected disabled>Filter by bg</option>
             <option>Afrika</option>
@@ -39,8 +39,219 @@
             <option>Oceaniya</option>
           </select>
         </form>
-      </div>
-    </main>
+      </section>
+
+
+      <!-- INDEX-COUNTRIES -->
+      <section class="index-countries">
+        <!-- <h2>Countires list</h2> -->
+        <ul class="index-countries-list">
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="./img/flag-germany.jpg" alt="Germany" width="264" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a class="index-country-link" href="">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population</dt>
+                    <dd class="index-country-details-value">81.770.900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="./img/flag-germany.jpg" alt="Germany" width="264" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a class="index-country-link" href="">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population</dt>
+                    <dd class="index-country-details-value">81.770.900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="./img/flag-germany.jpg" alt="Germany" width="264" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a class="index-country-link" href="">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population</dt>
+                    <dd class="index-country-details-value">81.770.900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="./img/flag-germany.jpg" alt="Germany" width="264" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a class="index-country-link" href="">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population</dt>
+                    <dd class="index-country-details-value">81.770.900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="./img/flag-germany.jpg" alt="Germany" width="264" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a class="index-country-link" href="">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population</dt>
+                    <dd class="index-country-details-value">81.770.900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="./img/flag-germany.jpg" alt="Germany" width="264" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a class="index-country-link" href="">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population</dt>
+                    <dd class="index-country-details-value">81.770.900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="./img/flag-germany.jpg" alt="Germany" width="264" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a class="index-country-link" href="">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population</dt>
+                    <dd class="index-country-details-value">81.770.900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="./img/flag-germany.jpg" alt="Germany" width="264" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a class="index-country-link" href="">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population</dt>
+                    <dd class="index-country-details-value">81.770.900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+        </ul>
+      </section>
+    </div>
+
+
+  </main>
 
   <script src="./js/main.js"></script>
 </body>
